k8s/07-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cofrap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: lyndaalga/cofrap-frontend:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
