k8s/05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cofrap
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
