k8s/08-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cofrap
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
