k8s/10-openfaas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openfaas-gateway-fn
  namespace: openfaas
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: openfaas-cors-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /function/
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
